parser/tests/cases/snapshots/cases__errors__if_no_body.snap
---
source: parser/tests/cases/errors.rs
expression: err

---
error: failed to parse `if` statement body
  ┌─ if_no_body:1:1
  │
1 │ if x:
  │ ^^^^^ the body of this `if` statement must be indented and non-empty


